@@ -1,5 +1,7 @@
 package hackatongrupo7.medicamentos_grupo7.medication;
 
+import hackatongrupo7.medicamentos_grupo7.allergy.Allergy;
+import hackatongrupo7.medicamentos_grupo7.allergy.AllergyRepository;
 import hackatongrupo7.medicamentos_grupo7.exceptions.EmptyListException;
 import hackatongrupo7.medicamentos_grupo7.exceptions.NotFoundException;
 import hackatongrupo7.medicamentos_grupo7.exceptions.UnauthorizedAccessException;
@@ -12,13 +14,17 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.sql.Time;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
 class MedicationServiceTest {
@@ -30,12 +36,17 @@ class MedicationServiceTest {
     private MedicationMapper medicationMapper;
 
     @Mock
-    private EntityUtil entityUtil;
+    private EntityUtil mapperUtil;
+
+    @Mock
+    private AllergyRepository allergyRepository;
 
     @InjectMocks
     private MedicationService medicationService;
 
     private User user;
+    private MedicationRequest medicationRequest;
+    private Medication medication;
 
     @BeforeEach
     void setUp() {
@@ -43,41 +54,89 @@ class MedicationServiceTest {
         user = new User();
         user.setId(1L);
         user.setUsername("testUser");
+
+        medicationRequest = new MedicationRequest("Paracetamol", 500, Time.valueOf(LocalTime.of(10, 0)), "Dolor de cabeza");
+        medication = new Medication();
+        medication.setId(1L);
+        medication.setName("Paracetamol");
+        medication.setUser(user);
     }
 
     @Test
-    void saveMedication_ShouldReturnResponseDetails() {
-        MedicationRequest request = new MedicationRequest("Paracetamol", 500, "10", "Dolor de cabeza");
-        Medication medication = new Medication();
+    void saveMedication_ShouldReturnResponseDetails_WhenNoConflicts() {
         MedicationResponseDetails responseDetails = new MedicationResponseDetails(
-                1L, "Paracetamol", 500, "10", false, true, "Dolor de cabeza", LocalDateTime.now()
+                1L, "Paracetamol", 500, Time.valueOf(LocalTime.of(10, 0)), false, true, "Dolor de cabeza", LocalDateTime.now()
         );
 
-        when(medicationMapper.toEntity(request, user)).thenReturn(medication);
-        when(medicationRepository.save(medication)).thenReturn(medication);
-        when(medicationMapper.fromEntityDetails(medication)).thenReturn(responseDetails);
+        when(allergyRepository.findAllByUserId(user.getId())).thenReturn(Collections.emptyList());
+        when(medicationRepository.findByUserId(user.getId())).thenReturn(Collections.emptyList());
+        when(medicationMapper.toEntity(medicationRequest, user)).thenReturn(medication);
+        when(medicationRepository.save(any(Medication.class))).thenReturn(medication);
+        when(medicationMapper.fromEntityDetails(any(Medication.class))).thenReturn(responseDetails);
 
-        MedicationResponseDetails result = medicationService.saveMedication(request, user);
+        MedicationResponseDetails result = medicationService.saveMedication(medicationRequest, user);
 
         assertNotNull(result);
         assertEquals("Paracetamol", result.name());
-        verify(medicationRepository).save(medication);
+        verify(medicationRepository).save(any(Medication.class));
+        verify(allergyRepository).findAllByUserId(user.getId());
     }
 
     @Test
-    void findMedicationSuggestions_ShouldReturnList() {
-        Medication med = new Medication();
-        List<Medication> meds = Arrays.asList(med);
-        MedicationResponseSummary summary = new MedicationResponseSummary("Ibuprofeno", 400, true);
+    void saveMedication_ShouldThrowException_WhenMedicationAlreadyExists() {
+        Medication existingMedication = new Medication();
+        existingMedication.setName("Paracetamol");
+        existingMedication.setUser(user);
 
-        when(medicationRepository.findByUserIdOrderByNameAsc(1L)).thenReturn(meds);
-        when(entityUtil.mapEntitiesToDTOs(meds, medicationMapper::fromEntitySummary)).thenReturn(List.of(summary));
+        when(allergyRepository.findAllByUserId(user.getId())).thenReturn(Collections.emptyList());
+        when(medicationRepository.findByUserId(user.getId())).thenReturn(List.of(existingMedication));
 
-        List<MedicationResponseSummary> result = medicationService.findMedicationSuggestions();
+        IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> medicationService.saveMedication(medicationRequest, user)
+        );
 
-        assertEquals(1, result.size());
-        verify(medicationRepository).findByUserIdOrderByNameAsc(1L);
+        assertEquals("You already have this medication added.", exception.getMessage());
+        verify(medicationRepository, never()).save(any());
     }
+
+    @Test
+    void saveMedication_ShouldThrowException_WhenAllergyConflictExists() {
+        Allergy allergy = new Allergy();
+        allergy.setName("paracetamol");
+        allergy.setUser(user);
+
+        when(allergyRepository.findAllByUserId(user.getId())).thenReturn(List.of(allergy));
+        when(medicationRepository.findByUserId(user.getId())).thenReturn(Collections.emptyList());
+
+        RuntimeException exception = assertThrows(
+                RuntimeException.class,
+                () -> medicationService.saveMedication(medicationRequest, user)
+        );
+
+        assertEquals("You have that allergy added now", exception.getMessage());
+        verify(medicationRepository, never()).save(any());
+    }
+
+    @Test
+    void saveMedication_ShouldIgnoreCaseAndTrimSpaces_WhenCheckingAllergies() {
+        MedicationRequest requestWithSpaces = new MedicationRequest("  PARACETAMOL  ", 500, Time.valueOf(LocalTime.of(10, 0)), "Dolor de cabeza");
+
+        Allergy allergy = new Allergy();
+        allergy.setName("paracetamol");
+        allergy.setUser(user);
+
+        when(allergyRepository.findAllByUserId(user.getId())).thenReturn(List.of(allergy));
+        when(medicationRepository.findByUserId(user.getId())).thenReturn(Collections.emptyList());
+
+        RuntimeException exception = assertThrows(
+                RuntimeException.class,
+                () -> medicationService.saveMedication(requestWithSpaces, user)
+        );
+
+        assertEquals("You have that allergy added now", exception.getMessage());
+    }
+
 
     @Test
     void findMedicationSuggestions_ShouldThrowEmptyListException() {
@@ -86,20 +145,6 @@ class MedicationServiceTest {
         assertThrows(EmptyListException.class, () -> medicationService.findMedicationSuggestions());
     }
 
-    @Test
-    void findAllMedicationsByUser_ShouldReturnList() {
-        Medication med = new Medication();
-        List<Medication> meds = Arrays.asList(med);
-        MedicationResponseSummary summary = new MedicationResponseSummary("Aspirina", 100, false);
-
-        when(medicationRepository.findByUserId(user.getId())).thenReturn(meds);
-        when(entityUtil.mapEntitiesToDTOs(meds, medicationMapper::fromEntitySummary)).thenReturn(List.of(summary));
-
-        List<MedicationResponseSummary> result = medicationService.findAllMedicationsByUser(user);
-
-        assertEquals(1, result.size());
-        verify(medicationRepository).findByUserId(user.getId());
-    }
 
     @Test
     void findAllMedicationsByUser_ShouldThrowEmptyListException() {
@@ -110,14 +155,12 @@ class MedicationServiceTest {
 
     @Test
     void findById_ShouldReturnDetails() {
-        Medication med = new Medication();
-        med.setId(1L);
-        med.setUser(user);
+        MedicationResponseDetails response = new MedicationResponseDetails(
+                1L, "Paracetamol", 500, Time.valueOf(LocalTime.of(10, 0)), false, true, "desc", LocalDateTime.now()
+        );
 
-        MedicationResponseDetails response = new MedicationResponseDetails(1L, "Paracetamol", 500, "10", false, true, "desc", LocalDateTime.now());
-
-        when(medicationRepository.findById(1L)).thenReturn(Optional.of(med));
-        when(medicationMapper.fromEntityDetails(med)).thenReturn(response);
+        when(medicationRepository.findById(1L)).thenReturn(Optional.of(medication));
+        when(medicationMapper.fromEntityDetails(medication)).thenReturn(response);
 
         MedicationResponseDetails result = medicationService.findById(1L, user);
 
@@ -134,22 +177,18 @@ class MedicationServiceTest {
 
     @Test
     void findById_ShouldThrowUnauthorizedAccessException() {
-        Medication med = new Medication();
         User anotherUser = new User();
         anotherUser.setUsername("otherUser");
-        med.setUser(anotherUser);
+        medication.setUser(anotherUser);
 
-        when(medicationRepository.findById(1L)).thenReturn(Optional.of(med));
+        when(medicationRepository.findById(1L)).thenReturn(Optional.of(medication));
 
         assertThrows(UnauthorizedAccessException.class, () -> medicationService.findById(1L, user));
     }
 
     @Test
     void delete_ShouldDeleteMedication() {
-        Medication med = new Medication();
-        med.setUser(user);
-
-        when(medicationRepository.findById(1L)).thenReturn(Optional.of(med));
+        when(medicationRepository.findById(1L)).thenReturn(Optional.of(medication));
 
         medicationService.delete(1L, user);
 
@@ -157,57 +196,68 @@ class MedicationServiceTest {
     }
 
     @Test
+    void delete_ShouldThrowNotFoundException_WhenMedicationNotFound() {
+        when(medicationRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThrows(NotFoundException.class, () -> medicationService.delete(1L, user));
+        verify(medicationRepository, never()).deleteById(anyLong());
+    }
+
+    @Test
     void delete_ShouldThrowUnauthorizedAccessException() {
-        Medication med = new Medication();
         User anotherUser = new User();
         anotherUser.setUsername("otherUser");
-        med.setUser(anotherUser);
+        medication.setUser(anotherUser);
 
-        when(medicationRepository.findById(1L)).thenReturn(Optional.of(med));
+        when(medicationRepository.findById(1L)).thenReturn(Optional.of(medication));
 
         assertThrows(UnauthorizedAccessException.class, () -> medicationService.delete(1L, user));
+        verify(medicationRepository, never()).deleteById(anyLong());
     }
 
     @Test
     void markAsTaken_ShouldMarkMedication() {
-        Medication med = new Medication();
-        med.setUser(user);
-        med.setTaken(false);
+        medication.setTaken(false);
+        MedicationResponseSummary summary = new MedicationResponseSummary(1L,"Paracetamol", 500, true);
 
-        MedicationResponseSummary summary = new MedicationResponseSummary("Paracetamol", 500, true);
-
-        when(medicationRepository.findById(1L)).thenReturn(Optional.of(med));
-        when(medicationRepository.save(med)).thenReturn(med);
-        when(medicationMapper.fromEntitySummary(med)).thenReturn(summary);
+        when(medicationRepository.findById(1L)).thenReturn(Optional.of(medication));
+        when(medicationRepository.save(medication)).thenReturn(medication);
+        when(medicationMapper.fromEntitySummary(medication)).thenReturn(summary);
 
         MedicationResponseSummary result = medicationService.markAsTaken(1L, user);
 
         assertTrue(result.taken());
-        verify(medicationRepository).save(med);
+        verify(medicationRepository).save(medication);
+        assertTrue(medication.isTaken());
+    }
+
+    @Test
+    void markAsTaken_ShouldThrowNotFoundException_WhenMedicationNotFound() {
+        when(medicationRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThrows(NotFoundException.class, () -> medicationService.markAsTaken(1L, user));
+        verify(medicationRepository, never()).save(any());
     }
 
     @Test
     void markAsTaken_ShouldThrowUnauthorizedAccessException() {
-        Medication med = new Medication();
         User anotherUser = new User();
         anotherUser.setUsername("otherUser");
-        med.setUser(anotherUser);
+        medication.setUser(anotherUser);
 
-        when(medicationRepository.findById(1L)).thenReturn(Optional.of(med));
+        when(medicationRepository.findById(1L)).thenReturn(Optional.of(medication));
 
         assertThrows(UnauthorizedAccessException.class, () -> medicationService.markAsTaken(1L, user));
+        verify(medicationRepository, never()).save(any());
     }
 
     @Test
     void markAsTaken_ShouldReturnSummaryIfAlreadyTaken() {
-        Medication med = new Medication();
-        med.setUser(user);
-        med.setTaken(true);
+        medication.setTaken(true);
+        MedicationResponseSummary summary = new MedicationResponseSummary(1L,"Paracetamol", 500, true);
 
-        MedicationResponseSummary summary = new MedicationResponseSummary("Paracetamol", 500, true);
-
-        when(medicationRepository.findById(1L)).thenReturn(Optional.of(med));
-        when(medicationMapper.fromEntitySummary(med)).thenReturn(summary);
+        when(medicationRepository.findById(1L)).thenReturn(Optional.of(medication));
+        when(medicationMapper.fromEntitySummary(medication)).thenReturn(summary);
 
         MedicationResponseSummary result = medicationService.markAsTaken(1L, user);
 
